--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <div class="one_skill">
                 <div class = "skill_name">
                     
-                    <h3 class="skillHeader">Data Base</h3>
+                    <h3 class="skillHeader">Data Bases</h3>
                 </div>
                 <div class="parentSkills_4"> 
                     <div class="div1"> 
